third_party/move/move-compiler-v2/transactional-tests/tests/misc/bug_14817_extended.opt-extra.exp
processed 8 tasks
task 0 lines 1-144:  publish [module 0xc0ffee::m {]
Error: compilation errors:
 bug: bytecode verification failed with unexpected status code `BORROWFIELD_TYPE_MISMATCH_ERROR`:
Error message: none
   ┌─ TEMPFILE:48:9
   │
48 │         &mut p.q.r
   │         ^^^^^^^^^^
   │
   = please consider reporting this issue (see https://aptos.dev/en/build/smart-contracts/compiler_v2#reporting-an-issue)


task 1 lines 146-146:  run 0xc0ffee::m::main
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 2 lines 148-162:  publish [module 0xCAFE::m1 {]
task 3 lines 164-164:  run 0xCAFE::m1::main
task 4 lines 166-183:  publish [module 0xCAFE::m2 {]
task 5 lines 185-185:  run 0xCAFE::m2::main
task 6 lines 187-201:  publish [module 0xc0ffee::m3 {]
task 7 lines 203-203:  run 0xc0ffee::m3::main
